# tennis_model

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: data_schemas.md
docs/tasks/: rank_cutoff_task.md
src/: __init__.py
src/data/: __init__.py  db_migrations.py  draw_scraper.py  fetch_upcoming_draw.py  ingest_sackmann_data.py  player_utils.py
src/data/migrations/: 20250508_add_combined_surface_date_index.json  __init__.py
src/features/: __init__.py  build_features.py
src/models/: __init__.py  head_to_head_predictor.py
src/visualization/: __init__.py
tests/: test_build_features.py  test_head_to_head_predictor.py
