[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ship everything under src as code
packages = ["src"]

[project]
name = "tennis-model"
version = "0.1.0"
description = "A tennis match outcome prediction model using historical data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.22.0",
    "pyarrow>=7.0.0",
    "fastparquet>=0.8.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "flake8>=4.0.0",
    "black>=22.1.0",
    "isort>=5.10.0",
]

notebook = [
    "jupyter>=1.0.0",
    "nbconvert>=6.4.0",
]

all = [
    "pytest>=6.2.5",
    "flake8>=4.0.0",
    "black>=22.1.0",
    "isort>=5.10.0",
    "jupyter>=1.0.0",
    "nbconvert>=6.4.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88